src/components/PlayerLaunchBtn/PlayerLaunchBtn.module.scss
@use '../../scss/variables' as *;

.container{
  display: grid;
  height: 7rem;
  width: 100%;
  margin-left: 1rem;
  margin-bottom: 1rem;
  align-items: center;
  @media screen and (orientation: portrait) {
    height: 18vh;
    margin-left: 0.5rem;
  }
}

.svg {
  pointer-events: all;

  :global(#close-path) {
    display: none;
  }

  .rect,
  .play,
  .text {
    cursor: pointer;
  }

  .rect {
    fill: rgba(0,0,0,0.01);
  }

  .play {
    fill: $lighter-grey;
  }

  .text {
    fill: $light-grey;
    font-family: "Exo 2", sans-serif;
    font-size: 1.7rem;
    user-select: none;
  }

  .play,
  .text {
    transition: fill 0.6s ease-out 0.6s;
  }
}

